# gmelt

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.996ICU  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pages.yml
docs/: Gemfile
gmelt/: main.py
gmelt/api/: gmail.py
gmelt/config/: config.py  default.toml
gmelt/ui/: tui.py  tui.tcss
gmelt/ui/screens/: __init__.py  base.py  init.py  main.py  quit.py  select.py
gmelt/utils/: config.py
